scientists data model & renders scientist with each

--- a/app/templates/scientists.hbs
+++ b/app/templates/scientists.hbs
@@ -1,2 +1,9 @@
 {{page-title "Scientists"}}
-{{outlet}}
+
+<h2>List of Scientists</h2>
+
+<ul>
+  {{#each @model as |scientist|}}
+    <li>{{scientist}}</li>
+  {{/each}}
+</ul>
