--- a/app/components/people-list.hbs
+++ b/app/components/people-list.hbs
@@ -4,6 +4,7 @@
 
 <ul>
   {{#each @people as |person|}}
-    <li>{{person}}</li>
-  {{/each}}
+    <li>
+      <button type="button">{{person}}</button>
+    </li>  {{/each}}
 </ul>
