--- a/app/components/people-list.hbs
+++ b/app/components/people-list.hbs
@@ -5,6 +5,9 @@
 <ul>
   {{#each @people as |person|}}
     <li>
-      <button type="button">{{person}}</button>
-    </li>  {{/each}}
+      <button type="button" {{on 'click' (fn this.showPerson person) }}>
+        {{person}}
+      </button>
+    </li> 
+  {{/each}}
 </ul>
